change faviocn / fix letter spacing

--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -20,6 +20,6 @@ body {
 .ikamodoki {
   font-family: イカモドキ, sans-serif;
   font-size: 1.1em;
-  letter-spacing: .05em;
+  letter-spacing: .075em;
   vertical-align: -.15em;
 }
